add units to total invoices & quotes

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
-    <meta
-    name="description"
-    content="Web site managing invoices"
-    />
+    <meta 
+      name="description" 
+      content="Web site managing invoices or quotes, you can
+      read, create, update and delete invoices & quotes, the 
+      differents docs can be print or send by email" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
